<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_bg">

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_toEndOf="@id/temp" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:paddingStart="16dp"
                android:textColor="@color/white"
                android:textSize="80sp" />

            <TextView
                android:id="@+id/weather_name"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:textColor="@color/white" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        style="@style/Card"
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="2"
                                android:contentDescription="@string/pressure"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_pressure" />

                            <TextView
                                android:id="@+id/pressure"
                                style="@style/TextCardValue"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center|bottom" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/pressure" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/Card"
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="2"
                                android:contentDescription="@string/clouds"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_clouds" />

                            <TextView
                                android:id="@+id/clouds"
                                style="@style/TextCardValue"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center|bottom" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/clouds" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        style="@style/Card"
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="2"
                                android:contentDescription="@string/wind_speed"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_wind_speed" />

                            <TextView
                                android:id="@+id/west_speed"
                                style="@style/TextCardValue"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center|bottom" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/wind_speed" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/Card"
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="2"
                                android:contentDescription="@string/humidity"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_humidity" />

                            <TextView
                                android:id="@+id/humidity"
                                style="@style/TextCardValue"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center|bottom" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/humidity" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="330dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        style="@style/Card"
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="2"
                                android:contentDescription="@string/feels_like"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_feels_like" />

                            <TextView
                                android:id="@+id/feels_like"
                                style="@style/TextCardValue"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center|bottom" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/feels_like" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/Card"
                        android:layout_width="120dp"
                        android:layout_height="140dp"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="2"
                                android:contentDescription="@string/visibility"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_visibility" />

                            <TextView
                                android:id="@+id/visibility"
                                style="@style/TextCardValue"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center|bottom" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/visibility" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>
